fix search block not aligning correctly

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -664,3 +664,7 @@ License: https://www.wowthemes.net/freebies-license/
 .sticky-top-80 {
     top:80px;
 }
+
+#lunrsearchresults {
+    display: none;
+}
